# Synechocystis_pub_scripts_2025

./: .gitignore  README.md  pyproject.toml
demo_data/: annotation.gff  config.yaml  genome.fa
demo_data/bam_files/: TIS-test-1.bam  TIS-test-1.bam.bai  TIS-test-2.bam  TIS-test-2.bam.bai
helpers/: build_demo_data.py
locus_extraction/: extract_locus_data.py
metagene_analysis/: config_sample.yml  metagene_plotting.py  metagene_profiling.py
metagene_analysis/lib/: annotation.py  bam_reader.py  io.py  metagene.py  misc.py  plotting.py
metagene_analysis/tests/: test_annotation.py  test_bam_reader.py  test_io.py  test_main.py  test_metagene.py  test_misc.py  test_plotting.py
reproduction_data/HRIBO_data/: annotation.gff  download.sh
reproduction_data/HRIBO_data/TIS/: config.yaml  samples.tsv
reproduction_data/HRIBO_data/TTS/: config.yaml  samples.tsv
reproduction_data/ORFBounder_data/: config_experiments.tsv
reproduction_data/ORFBounder_data/TIS/: TIS_run_mapped_reads.tsv  TIS_run_offsets_19.json  TIS_run_offsets_2.json  TIS_run_offsets_4.json  TIS_run_read_lengths.json
reproduction_data/ORFBounder_data/TTS/: TTS_run_mapped_reads.tsv  TTS_run_offsets.json  TTS_run_read_lengths.json
reproduction_data/metagene_data/: annotation_confident.gff  config_TIS.yaml  config_TTS.yaml  genome.fa  run_create_logo.sh  run_locus_extraction.sh
weblogo/: create_logo.sh  extract_sequences.py  merge_xlsx.py
