[project]
name = "metagene_profiling"
version = "0.1.0"
description = "Scripts developed and used for the publication."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pysam>=0.23.3",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "biopython>=1.8.6",
    "interlap>=0.2.7",
    "openpyxl>=3.1.5",
    "weblogo>=3.7.9",
    "xlsxwriter>=3.2.9",
    "xlrd>=2.0.2",
    "kaleido>=1.2.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "plotly>=6.3.1",
]
